[gd_scene load_steps=2 format=2]

[ext_resource path="res://sfx/scripts/audio_manager.gd" type="Script" id=1]

[node name="AudioManager" type="Node"]
script = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="MainSound" type="AudioStreamPlayer" parent="."]

[node name="SubSound" type="AudioStreamPlayer" parent="."]

[node name="UISound" type="AudioStreamPlayer" parent="."]

[node name="Basic_Attack_Sound" type="AudioStreamPlayer2D" parent="."]
volume_db = 5.0

[node name="Skill_1_Sound" type="AudioStreamPlayer2D" parent="."]

[node name="Skill_2_Sound" type="AudioStreamPlayer2D" parent="."]

[node name="Skill_3_Sound" type="AudioStreamPlayer2D" parent="."]

[node name="Skill_4_Sound" type="AudioStreamPlayer2D" parent="."]
